test_regress/t/t_fuzz_negwidth_bad.out
%Error: t/t_fuzz_negwidth_bad.v:8: Unsupported: Width of number exceeds implementation limit: 1231232312312312'd1  (IEEE 2017 6.9.1)
int c = 1231232312312312'd1;
        ^~~~~~~~~~~~~~~~~~~
%Error: Exiting due to
